--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "dev": "vite --host 0.0.0.0",
     "dev:extension": "npm-run-all --parallel build:dev watch:rollup:deps",
     "build:dev": "vite build --mode development -w --base /dist/ --sourcemap --minify false",
-    "build": "npm-run-all --serial rimraf build:deps build:ui build:sw zip",
-    "build:ui": "cross-env NODE_ENV=production && vite build --base /dist/ --minify true src",
+    "build": "npm-run-all --serial build:ui",
+    "build:ui": "cross-env NODE_ENV=production && vite build --base /dist/ --minify true",
     "build:sw": "node utils/build-sw.js",
     "build:deps": "cross-env NODE_ENV=production node utils/watch-rollup.js",
     "watch:rollup:deps": "node utils/watch-rollup.js",
