--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "tui-image-editor": "^3.15.3",
     "uuid": "^9.0.1",
     "vite": "^5.2.8",
+    "vite-plugin-pwa": "^0.20.0",
     "vite-plugin-vuetify": "^2.0.3",
     "vue": "^3.4.23",
     "vue-router": "^4.3.2",
