--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ VITE_APP_KEYCLOAK_URL="https://keycloak.june07.com"
 VITE_APP_KEYCLOAK_REALM="june07"
 VITE_APP_KEYCLOAK_CLIENT_ID="ugh"
 VITE_APP_EXTENSION_ID="jnndolgphmohopnenfacapkadpmpifjb"
+VITE_APP_CONTENT_API_URL=https://june07.com
+VITE_APP_CONTENT_API_KEY=0f765ae827dcd5857e08eb60fe
