--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@material-design-icons/font": "^0.14.13",
+    "@tryghost/content-api": "^1.11.21",
     "animate.css": "^4.1.1",
     "async": "^3.2.4",
     "axios": "^1.6.8",
@@ -27,6 +28,8 @@
     "cropperjs": "^1.6.2",
     "dropzone": "^6.0.0-beta.2",
     "keycloak-js": "^24.0.3",
+    "lru-cache": "^10.2.2",
+    "marked": "^12.0.2",
     "nanoid": "^5.0.4",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
