--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev:extension": "npm-run-all --parallel build:dev watch:rollup:deps",
     "build:dev": "vite build --mode development -w --base /dist/ --sourcemap --minify false",
     "build": "npm-run-all --serial build:ui",
-    "build:ui": "cross-env NODE_ENV=production && vite build --minify true",
+    "build:ui": "cross-env NODE_ENV=production && vite build",
+    "build:ui:minify": "cross-env NODE_ENV=production && vite build --minify true",
     "build:sw": "node utils/build-sw.js",
     "build:deps": "cross-env NODE_ENV=production node utils/watch-rollup.js",
     "watch:rollup:deps": "node utils/watch-rollup.js",
